--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                     <div class="md:w-1/2 md:pr-12 mb-10 md:mb-0">
                         <h1 class="text-4xl md:text-5xl font-bold mb-6 leading-tight">The Best Sudoku Experience on iOS</h1>
                         <p class="text-xl text-secondaryFg mb-8">Enjoy beautiful puzzles, smart hints, and a delightful interface designed specifically for iPhone and iPad.</p>
-                        <a href="https://apps.apple.com/app/magic-sudoku/id1234567890" class="app-store-button inline-block bg-accent hover:bg-highlight-blue text-primaryBg font-bold py-3 px-8 rounded-full transition duration-300" id="download">Download on the App Store</a>
+                        <a href="https://apps.apple.com/app/magic-sudoku/id6742204685" class="app-store-button inline-block bg-accent hover:bg-highlight-blue text-primaryBg font-bold py-3 px-8 rounded-full transition duration-300" id="download">Download on the App Store</a>
                     </div>
                     <div class="md:w-1/2 flex justify-center">
-                        <div class="rounded-3xl shadow-2xl overflow-hidden">
-                            <img src="/api/placeholder/350/700" alt="Magic Sudoku App Screenshot" class="w-full" />
+                        <div class="overflow-hidden">
+                            <img src="/images/phone.png" alt="Magic Sudoku App Screenshot" class="w-full" />
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
             <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-6">Ready to Solve Some Puzzles?</h2>
                 <p class="text-xl text-secondaryFg mb-8 max-w-2xl mx-auto">Download Magic Sudoku today and experience the most elegant way to solve Sudoku puzzles on your iOS device.</p>
-                <a href="https://apps.apple.com/app/magic-sudoku/id1234567890" class="app-store-button inline-block bg-highlight-green hover:bg-highlight-blue text-primaryBg font-bold py-3 px-8 rounded-full transition duration-300">Get Started</a>
+                <a href="https://apps.apple.com/app/magic-sudoku/id6742204685" class="app-store-button inline-block bg-highlight-green hover:bg-highlight-blue text-primaryBg font-bold py-3 px-8 rounded-full transition duration-300">Get Started</a>
             </div>
         </section>
     </div>
